[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/HUD/assets/open-sans/OpenSans-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scenes/MainMenu/MenuButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/MainMenu/SubMenus/Settings/Sound/SoundSettings.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 24
outline_color = Color( 0.462745, 0.462745, 0.462745, 1 )
font_data = ExtResource( 1 )

[node name="SoundSettings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer"]
margin_right = 1900.0
margin_bottom = 1060.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/CenterContainer"]
margin_left = 694.0
margin_top = 428.0
margin_right = 1206.0
margin_bottom = 632.0

[node name="VolumeLabel" type="Label" parent="MarginContainer/CenterContainer/VBoxContainer"]
margin_right = 512.0
margin_bottom = 45.0
custom_fonts/font = SubResource( 1 )
text = "Sound level"
align = 1

[node name="VolumeSlider" type="HSlider" parent="MarginContainer/CenterContainer/VBoxContainer"]
margin_top = 49.0
margin_right = 512.0
margin_bottom = 81.0
rect_min_size = Vector2( 512, 32 )
size_flags_horizontal = 5
size_flags_vertical = 4
min_value = -30.0
max_value = 30.0
step = 0.5
rounded = true

[node name="VolumeValue" type="Label" parent="MarginContainer/CenterContainer/VBoxContainer"]
margin_top = 85.0
margin_right = 512.0
margin_bottom = 119.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.647059, 0.647059, 0.647059, 1 )
text = "100%"
align = 1
__meta__ = {
"_editor_description_": ""
}

[node name="MuteLabel" type="Label" parent="MarginContainer/CenterContainer/VBoxContainer"]
margin_top = 123.0
margin_right = 512.0
margin_bottom = 168.0
custom_fonts/font = SubResource( 1 )
text = "Mute all sounds"
align = 1

[node name="MuteCheckBox" type="CheckBox" parent="MarginContainer/CenterContainer/VBoxContainer"]
margin_left = 240.0
margin_top = 172.0
margin_right = 272.0
margin_bottom = 204.0
rect_min_size = Vector2( 32, 32 )
size_flags_horizontal = 6
size_flags_vertical = 7
align = 1
expand_icon = true

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_right = 150.0
margin_bottom = 50.0
size_flags_horizontal = 0
size_flags_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackBtn" type="Button" parent="MarginContainer/HBoxContainer" instance=ExtResource( 2 )]
margin_right = 150.0
margin_bottom = 50.0
rect_min_size = Vector2( 150, 50 )
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="value_changed" from="MarginContainer/CenterContainer/VBoxContainer/VolumeSlider" to="." method="_on_VolumeSlider_value_changed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/MuteCheckBox" to="." method="_on_MuteCheckBox_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/BackBtn" to="." method="_on_BackBtn_pressed"]
